#59: fixed poms and module-info i springboot to set up localhost:8080/movielist, co-author: Thomas