@@ -6,13 +6,12 @@
 	<artifactId>springboot</artifactId>
 
 
-	
 	<parent>
-		<groupId>it1901</groupId>
-		<artifactId>movielist</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-		<relativePath>..</relativePath>
-	</parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.7.5</version>
+        <relativePath />
+    </parent>
 
 	<!-- <version>0.0.1-SNAPSHOT</version>
 	<name>springboot</name>
@@ -20,9 +19,18 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties> -->
+
+
+	<properties>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.release>17</maven.compiler.release>
+        <spring.boot.version>2.7.5</spring.boot.version>
+    </properties>
+	
 	
 	<dependencies>
-		<dependency>
+		<!-- <dependency>
 			<groupId>it1901</groupId>
 			<artifactId>movielist</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
@@ -32,7 +40,7 @@
 			<artifactId>json</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 			<scope>compile</scope>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
@@ -66,11 +74,22 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+				<dependencies>
+                    <dependency>
+                        <groupId>org.ow2.asm</groupId>
+                        <artifactId>asm</artifactId>
+                        <version>9.1</version>
+                    </dependency>
+                </dependencies>
 				<configuration>
-					<argLine>
-					--add-opens movielist.springboot/movielist.springboot=ALL-UNNAMED
-					</argLine>
-				</configuration>
+                    <archive>
+						<manifest>
+                    	<mainClass>movielist.springboot/movielist.springboot.SpringbootApplication</mainClass>
+						</manifest>
+					</archive>
+                </configuration>
+
 			</plugin>
 
 
